Add support to val dataset instead of percentage split

--- a/battery-rul-estimation/experiments/nasa-randomized/local-global-autoencoder_nasa.ipynb
+++ b/battery-rul-estimation/experiments/nasa-randomized/local-global-autoencoder_nasa.ipynb
@@ -92,6 +92,29 @@
    },
    "outputs": [],
    "source": [
+    "train_names_10k = [\n",
+    "        'RW_Skewed_Low_Room_Temp_DataSet_2Post/data/Matlab/RW13',\n",
+    "        'RW_Skewed_Low_Room_Temp_DataSet_2Post/data/Matlab/RW14',\n",
+    "        'RW_Skewed_Low_Room_Temp_DataSet_2Post/data/Matlab/RW15',\n",
+    "\n",
+    "        'RW_Skewed_Low_40C_DataSet_2Post/data/Matlab/RW21',\n",
+    "        'RW_Skewed_Low_40C_DataSet_2Post/data/Matlab/RW22',\n",
+    "\n",
+    "        'RW_Skewed_High_40C_DataSet_2Post/data/Matlab/RW25',\n",
+    "        'RW_Skewed_High_40C_DataSet_2Post/data/Matlab/RW26',\n",
+    "        'RW_Skewed_High_40C_DataSet_2Post/data/Matlab/RW27',\n",
+    "]\n",
+    "\n",
+    "val_names_10k = [\n",
+    "        'RW_Skewed_Low_40C_DataSet_2Post/data/Matlab/RW23',\n",
+    "]\n",
+    "\n",
+    "test_names_10k = [\n",
+    "        'RW_Skewed_Low_Room_Temp_DataSet_2Post/data/Matlab/RW16',\n",
+    "        'RW_Skewed_Low_40C_DataSet_2Post/data/Matlab/RW24',\n",
+    "        'RW_Skewed_High_40C_DataSet_2Post/data/Matlab/RW28',\n",
+    "]\n",
+    "\n",
     "train_names_20k = [\n",
     "        'Battery_Uniform_Distribution_Variable_Charge_Room_Temp_DataSet_2Post/data/Matlab/RW1',\n",
     "        'Battery_Uniform_Distribution_Variable_Charge_Room_Temp_DataSet_2Post/data/Matlab/RW2',\n",
@@ -110,26 +133,6 @@
     "        'Battery_Uniform_Distribution_Variable_Charge_Room_Temp_DataSet_2Post/data/Matlab/RW8',\n",
     "        'Battery_Uniform_Distribution_Discharge_Room_Temp_DataSet_2Post/data/Matlab/RW6',\n",
     "        #'Battery_Uniform_Distribution_Charge_Discharge_DataSet_2Post/data/Matlab/RW12',\n",
-    "]\n",
-    "\n",
-    "train_names_10k = [\n",
-    "        'RW_Skewed_Low_Room_Temp_DataSet_2Post/data/Matlab/RW13',\n",
-    "        'RW_Skewed_Low_Room_Temp_DataSet_2Post/data/Matlab/RW14',\n",
-    "        'RW_Skewed_Low_Room_Temp_DataSet_2Post/data/Matlab/RW15',\n",
-    "\n",
-    "        'RW_Skewed_Low_40C_DataSet_2Post/data/Matlab/RW21',\n",
-    "        'RW_Skewed_Low_40C_DataSet_2Post/data/Matlab/RW22',\n",
-    "        'RW_Skewed_Low_40C_DataSet_2Post/data/Matlab/RW23',\n",
-    "\n",
-    "        'RW_Skewed_High_40C_DataSet_2Post/data/Matlab/RW25',\n",
-    "        'RW_Skewed_High_40C_DataSet_2Post/data/Matlab/RW26',\n",
-    "        'RW_Skewed_High_40C_DataSet_2Post/data/Matlab/RW27',\n",
-    "]\n",
-    "\n",
-    "test_names_10k = [\n",
-    "        'RW_Skewed_Low_Room_Temp_DataSet_2Post/data/Matlab/RW16',\n",
-    "        'RW_Skewed_Low_40C_DataSet_2Post/data/Matlab/RW24',\n",
-    "        'RW_Skewed_High_40C_DataSet_2Post/data/Matlab/RW28',\n",
     "]\n",
     "\n",
     "train_names_100k = [\n",
@@ -173,7 +176,8 @@
    },
    "outputs": [],
    "source": [
-    "(train_x_10k, _, test_x_10k, _, battery_range_cycle_train_10k, battery_range_cycle_test_10k, _, _, _, _) = nasa_data_handler.get_discharge_whole_cycle_future(train_names_10k, test_names_10k)\n",
+    "(train_x_10k, _, test_x_10k, _, battery_range_cycle_train_10k, battery_range_cycle_test_10k, _, _, _, _,\n",
+    "  val_x_10k, _, _, _, _) = nasa_data_handler.get_discharge_whole_cycle_future(train_names_10k, test_names_10k, val_names_10k)\n",
     "(train_x_20k, _, test_x_20k, _, _, _, _, _, _, _) = nasa_data_handler.get_discharge_whole_cycle_future(train_names_20k, test_names_20k)\n",
     "(train_x_100k, _, test_x_no_100k, _, _, _, _, _, _, _) = nasa_data_handler.get_discharge_whole_cycle_future(train_names_100k, test_names_no_100k)\n",
     "\n",
@@ -191,6 +195,12 @@
     "train_x[train_x_10k.shape[0]:train_x_10k.shape[0]+train_x_20k.shape[0], :train_x_20k.shape[1], :] = train_x_20k\n",
     "train_x[train_x_10k.shape[0]+train_x_20k.shape[0]:, :train_x_100k.shape[1], :] = train_x_100k\n",
     "\n",
+    "val_x = np.zeros((\n",
+    "        val_x_10k.shape[0],\n",
+    "        max_lenght,\n",
+    "        val_x_10k.shape[2]))\n",
+    "val_x[:val_x_10k.shape[0], :val_x_10k.shape[1], :] = val_x_10k\n",
+    "\n",
     "test_x = np.zeros((\n",
     "        test_x_10k.shape[0] + test_x_20k.shape[0] + test_x_no_100k.shape[0],\n",
     "        max_lenght,\n",
@@ -200,15 +210,21 @@
     "test_x[test_x_10k.shape[0]+test_x_20k.shape[0]:, :test_x_no_100k.shape[1], :] = test_x_no_100k\n",
     "\n",
     "print(\"train shape {}\".format(train_x.shape))\n",
+    "print(\"val shape {}\".format(val_x.shape))\n",
     "print(\"test shape {}\".format(test_x.shape))\n",
     "\n",
     "train_x = train_x[:,:11800,:]\n",
+    "val_x = val_x[:,:11800,:]\n",
     "test_x = test_x[:,:11800,:]\n",
     "print(\"cut train shape {}\".format(train_x.shape))\n",
+    "print(\"cut val shape {}\".format(val_x.shape))\n",
     "print(\"cut test shape {}\".format(test_x.shape))\n",
     "\n",
     "x_norm = rul_handler.Normalization()\n",
-    "train_x, test_x = x_norm.normalize(train_x, test_x)"
+    "x_norm.fit(train_x)\n",
+    "train_x = x_norm.normalize(train_x)\n",
+    "val_x = x_norm.normalize(val_x)\n",
+    "test_x = x_norm.normalize(test_x)"
    ]
   },
   {
@@ -291,7 +307,7 @@
     "                                epochs=500, \n",
     "                                batch_size=32, \n",
     "                                verbose=1,\n",
-    "                                validation_split=0.1\n",
+    "                                validation_data=(val_x, val_x)\n",
     "                               )"
    ]
   },
