--- a/battery-rul-estimation/experiments/nasa-randomized/lstm_autoencoder_lg_rul_nasa.ipynb
+++ b/battery-rul-estimation/experiments/nasa-randomized/lstm_autoencoder_lg_rul_nasa.ipynb
@@ -104,11 +104,14 @@
     "\n",
     "        'RW_Skewed_Low_40C_DataSet_2Post/data/Matlab/RW21',\n",
     "        'RW_Skewed_Low_40C_DataSet_2Post/data/Matlab/RW22',\n",
-    "        'RW_Skewed_Low_40C_DataSet_2Post/data/Matlab/RW23',\n",
     "\n",
     "        'RW_Skewed_High_40C_DataSet_2Post/data/Matlab/RW25',\n",
     "        'RW_Skewed_High_40C_DataSet_2Post/data/Matlab/RW26',\n",
     "        'RW_Skewed_High_40C_DataSet_2Post/data/Matlab/RW27',\n",
+    "]\n",
+    "\n",
+    "val_names_10k = [\n",
+    "        'RW_Skewed_Low_40C_DataSet_2Post/data/Matlab/RW23',\n",
     "]\n",
     "\n",
     "test_names_10k = [\n",
@@ -178,8 +181,11 @@
     "# Getting data splitted by frequency\n",
     "(train_x_10k, train_y_soh_10k, test_x_10k, test_y_soh_10k, \n",
     "  battery_range_cycle_train_10k, battery_range_cycle_test_10k,\n",
-    "  time_train_10k, time_test_10k, current_train_10k, current_test_10k\n",
-    "  ) = nasa_data_handler.get_discharge_whole_cycle_future(train_names_10k, test_names_10k)\n",
+    "  time_train_10k, time_test_10k, current_train_10k, current_test_10k,\n",
+    "  val_x_10k, val_y_soh,\n",
+    "  val_battery_range,\n",
+    "  time_val, current_val\n",
+    "  ) = nasa_data_handler.get_discharge_whole_cycle_future(train_names_10k, test_names_10k, val_names_10k)\n",
     "(train_x_20k, train_y_soh_20k, test_x_20k, test_y_soh_20k,\n",
     "  battery_range_cycle_train_20k, battery_range_cycle_test_20k,\n",
     "  time_train_20k, time_test_20k, current_train_20k, current_test_20k\n",
@@ -204,6 +210,12 @@
     "train_x[train_x_10k.shape[0]:train_x_10k.shape[0]+train_x_20k.shape[0], :train_x_20k.shape[1], :] = train_x_20k\n",
     "train_x[train_x_10k.shape[0]+train_x_20k.shape[0]:, :train_x_100k.shape[1], :] = train_x_100k\n",
     "\n",
+    "val_x = np.zeros((\n",
+    "        val_x_10k.shape[0],\n",
+    "        max_lenght,\n",
+    "        val_x_10k.shape[2]))\n",
+    "val_x[:val_x_10k.shape[0], :val_x_10k.shape[1], :] = val_x_10k\n",
+    "\n",
     "test_x = np.zeros((\n",
     "        test_x_10k.shape[0] + test_x_20k.shape[0] + test_x_no_100k.shape[0],\n",
     "        max_lenght,\n",
@@ -213,11 +225,14 @@
     "test_x[test_x_10k.shape[0]+test_x_20k.shape[0]:, :test_x_no_100k.shape[1], :] = test_x_no_100k\n",
     "\n",
     "print(\"train shape {}\".format(train_x.shape))\n",
+    "print(\"val shape {}\".format(val_x.shape))\n",
     "print(\"test shape {}\".format(test_x.shape))\n",
     "\n",
     "train_x = train_x[:,:11800,:]\n",
+    "val_x = val_x[:,:11800,:]\n",
     "test_x = test_x[:,:11800,:]\n",
     "print(\"cut train shape {}\".format(train_x.shape))\n",
+    "print(\"cut val shape {}\".format(val_x.shape))\n",
     "print(\"cut test shape {}\".format(test_x.shape))\n",
     "\n",
     "\n",
@@ -290,12 +305,18 @@
     "train_y = rul_handler.prepare_y_future(train_names, train_battery_range, train_y_soh, current_train, time_train, CAPACITY_THRESHOLDS, capacity=NOMINAL_CAPACITY)\n",
     "del globals()[\"current_train\"]\n",
     "del globals()[\"time_train\"]\n",
+    "val_y = rul_handler.prepare_y_future(val_names_10k, val_battery_range, val_y_soh, current_val, time_val, CAPACITY_THRESHOLDS, capacity=NOMINAL_CAPACITY)\n",
+    "del globals()[\"current_val\"]\n",
+    "del globals()[\"time_val\"]\n",
     "test_y = rul_handler.prepare_y_future(test_names, test_battery_range, test_y_soh, current_test, time_test, CAPACITY_THRESHOLDS, capacity=NOMINAL_CAPACITY)\n",
     "del globals()[\"current_test\"]\n",
     "del globals()[\"time_test\"]\n",
     "\n",
     "x_norm = rul_handler.Normalization()\n",
-    "train_x, test_x = x_norm.normalize(train_x, test_x)"
+    "x_norm.fit(train_x)\n",
+    "train_x = x_norm.normalize(train_x)\n",
+    "val_x = x_norm.normalize(val_x)\n",
+    "test_x = x_norm.normalize(test_x)"
    ]
   },
   {
@@ -361,12 +382,16 @@
     "\n",
     "# compression\n",
     "train_x = autoencoder.encoder(train_x).numpy()\n",
+    "val_x = autoencoder.encoder(val_x).numpy()\n",
     "test_x = autoencoder.encoder(test_x).numpy()\n",
     "print(\"compressed train x shape {}\".format(train_x.shape))\n",
+    "print(\"compressed val x shape {}\".format(val_x.shape))\n",
     "print(\"compressed test x shape {}\".format(test_x.shape))\n",
     "test_x = test_x[:,~np.all(train_x == 0, axis=0)]#we need same column number of training\n",
+    "val_x = val_x[:,~np.all(train_x == 0, axis=0)]\n",
     "train_x = train_x[:,~np.all(train_x == 0, axis=0)]\n",
     "print(\"compressed train x shape without zero column {}\".format(train_x.shape))\n",
+    "print(\"compressed val x shape without zero column {}\".format(val_x.shape))\n",
     "print(\"compressed test x shape without zero column {}\".format(test_x.shape))"
    ]
   },
@@ -384,19 +409,26 @@
    "outputs": [],
    "source": [
     "x_norm = rul_handler.Normalization()\n",
-    "train_x, test_x = x_norm.normalize(train_x, test_x)\n",
+    "x_norm.fit(train_x)\n",
+    "train_x = x_norm.normalize(train_x)\n",
+    "val_x = x_norm.normalize(val_x)\n",
+    "test_x = x_norm.normalize(test_x)\n",
     "\n",
     "train_x = rul_handler.battery_life_to_time_series(train_x, N_CYCLE, train_battery_range)\n",
+    "val_x = rul_handler.battery_life_to_time_series(val_x, N_CYCLE, val_battery_range)\n",
     "test_x = rul_handler.battery_life_to_time_series(test_x, N_CYCLE, test_battery_range)\n",
     "\n",
     "train_x, train_y, train_battery_range, train_y_soh = rul_handler.delete_initial(train_x, train_y, train_battery_range, train_y_soh, WARMUP_TRAIN)\n",
+    "val_x, val_y, val_battery_range, val_y_soh = rul_handler.delete_initial(val_x, val_y, val_battery_range, val_y_soh, WARMUP_TRAIN)\n",
     "test_x, test_y, test_battery_range, test_y_soh = rul_handler.delete_initial(test_x, test_y, test_battery_range, test_y_soh, WARMUP_TEST)\n",
     "\n",
     "train_x, train_y, train_battery_range, train_y_soh = rul_handler.limit_zeros(train_x, train_y, train_battery_range, train_y_soh)\n",
+    "val_x, val_y, val_battery_range, val_y_soh = rul_handler.limit_zeros(val_x, val_y, val_battery_range, val_y_soh)\n",
     "test_x, test_y, test_battery_range, test_y_soh = rul_handler.limit_zeros(test_x, test_y, test_battery_range, test_y_soh)\n",
     "\n",
     "# first one is SOH, we keep only RUL\n",
     "train_y = train_y[:,1]\n",
+    "val_y = val_y[:,1]\n",
     "test_y = test_y[:,1]"
    ]
   },
@@ -418,7 +450,10 @@
    "outputs": [],
    "source": [
     "y_norm = rul_handler.Normalization()\n",
-    "train_y, test_y = y_norm.normalize(train_y, test_y)"
+    "y_norm.fit(train_y)\n",
+    "train_y = y_norm.normalize(train_y)\n",
+    "val_y = y_norm.normalize(val_y)\n",
+    "test_y = y_norm.normalize(test_y)"
    ]
   },
   {
@@ -476,7 +511,7 @@
     "                                epochs=500, \n",
     "                                batch_size=32, \n",
     "                                verbose=1,\n",
-    "                                validation_split=0\n",
+    "                                validation_data=(val_x, val_y)\n",
     "                               )"
    ]
   },
