--- a/battery-rul-estimation/experiments/unibo-powertools/vae_unibo.ipynb
+++ b/battery-rul-estimation/experiments/unibo-powertools/vae_unibo.ipynb
@@ -213,7 +213,7 @@
     "\n",
     "\n",
     "x_norm = rul_handler.Normalization()\n",
-    "train_x, test_x = x_norm.normalize(train_x, test_x)"
+    "train_x, test_x = x_norm.fit_and_normalize(train_x, test_x)"
    ]
   },
   {
