--- a/battery-rul-estimation/experiments/nasa-randomized/autoencoder_nasa.ipynb
+++ b/battery-rul-estimation/experiments/nasa-randomized/autoencoder_nasa.ipynb
@@ -208,7 +208,7 @@
     "print(\"cut test shape {}\".format(test_x.shape))\n",
     "\n",
     "x_norm = rul_handler.Normalization()\n",
-    "train_x, test_x = x_norm.normalize(train_x, test_x)"
+    "train_x, test_x = x_norm.fit_and_normalize(train_x, test_x)"
    ]
   },
   {
