--- a/battery-rul-estimation/experiments/nasa-randomized/lstm_autoencoder_rul_nasa.ipynb
+++ b/battery-rul-estimation/experiments/nasa-randomized/lstm_autoencoder_rul_nasa.ipynb
@@ -295,7 +295,7 @@
     "del globals()[\"time_test\"]\n",
     "\n",
     "x_norm = rul_handler.Normalization()\n",
-    "train_x, test_x = x_norm.normalize(train_x, test_x)"
+    "train_x, test_x = x_norm.fit_and_normalize(train_x, test_x)"
    ]
   },
   {
@@ -378,7 +378,7 @@
    "outputs": [],
    "source": [
     "x_norm = rul_handler.Normalization()\n",
-    "train_x, test_x = x_norm.normalize(train_x, test_x)\n",
+    "train_x, test_x = x_norm.fit_and_normalize(train_x, test_x)\n",
     "\n",
     "train_x = rul_handler.battery_life_to_time_series(train_x, N_CYCLE, train_battery_range)\n",
     "test_x = rul_handler.battery_life_to_time_series(test_x, N_CYCLE, test_battery_range)\n",
@@ -412,7 +412,7 @@
    "outputs": [],
    "source": [
     "y_norm = rul_handler.Normalization()\n",
-    "train_y, test_y = y_norm.normalize(train_y, test_y)"
+    "train_y, test_y = y_norm.fit_and_normalize(train_y, test_y)"
    ]
   },
   {
