--- a/battery-rul-estimation/experiments/unibo-powertools/lstm_rul_unibo.ipynb
+++ b/battery-rul-estimation/experiments/unibo-powertools/lstm_rul_unibo.ipynb
@@ -240,7 +240,7 @@
     "\n",
     "\n",
     "x_norm = rul_handler.Normalization()\n",
-    "train_x, test_x = x_norm.normalize(train_x, test_x)\n",
+    "train_x, test_x = x_norm.fit_and_normalize(train_x, test_x)\n",
     "train_x = rul_handler.battery_life_to_time_series(train_x, N_CYCLE, train_battery_range)\n",
     "test_x = rul_handler.battery_life_to_time_series(test_x, N_CYCLE, test_battery_range)\n",
     "\n",
@@ -270,7 +270,7 @@
    "outputs": [],
    "source": [
     "y_norm = rul_handler.Normalization()\n",
-    "train_y, test_y = y_norm.normalize(train_y, test_y)"
+    "train_y, test_y = y_norm.fit_and_normalize(train_y, test_y)"
    ]
   },
   {
