Change network to final one

--- a/battery-rul-estimation/experiments/nasa-randomized/lstm_autoencoder_lg_rul_nasa.ipynb
+++ b/battery-rul-estimation/experiments/nasa-randomized/lstm_autoencoder_lg_rul_nasa.ipynb
@@ -332,34 +332,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "AUTOENCODER_WEIGHTS = '2022-02-01-18-12-02_autoencoder_gl_nasa_randomized'\n",
+    "AUTOENCODER_WEIGHTS = 'autoencoder_gl_nasa_randomized'\n",
     "\n",
     "# Model definition\n",
     "\n",
     "opt = tf.keras.optimizers.Adam(learning_rate=0.0002)\n",
-    "LATENT_DIM = 15\n",
+    "LATENT_DIM_LOCAL = 7\n",
+    "LATENT_DIM_GLOBAL = 7\n",
     "\n",
     "class Autoencoder(Model):\n",
-    "    def __init__(self, latent_dim):\n",
+    "    def __init__(self, latent_dim_local, latent_dim_global):\n",
     "        super(Autoencoder, self).__init__()\n",
-    "        self.latent_dim = latent_dim\n",
+    "        self.latent_dim_local = latent_dim_local\n",
+    "        self.latent_dim_global = latent_dim_global\n",
     "\n",
     "        encoder_inputs = layers.Input(shape=(train_x.shape[1], train_x.shape[2]))\n",
     "        encoder_conv1 = layers.Conv1D(filters=16, kernel_size=10, strides=5, activation='relu', padding='same')(encoder_inputs)\n",
     "        encoder_pool1 = layers.MaxPooling1D(5, padding='same')(encoder_conv1)\n",
-    "        encoder_conv2 = layers.Conv1D(filters=16, kernel_size=4, strides=2, activation='relu', padding='same')(encoder_pool1)\n",
+    "        encoder_conv2 = layers.Conv1D(filters=8, kernel_size=4, strides=2, activation='relu', padding='same')(encoder_pool1)\n",
     "        encoder_pool2 = layers.MaxPooling1D(4, padding='same')(encoder_conv2)\n",
     "        encoder_flat1 = layers.Flatten()(encoder_pool1)\n",
     "        encoder_flat2 = layers.Flatten()(encoder_pool2)\n",
-    "        encoder_concat = layers.concatenate([encoder_flat1, encoder_flat2])\n",
-    "        encoder_outputs = layers.Dense(self.latent_dim, activation='relu')(encoder_concat)\n",
-    "        self.encoder = Model(inputs=encoder_inputs, outputs=encoder_outputs)\n",
+    "        encoder_dense_local = layers.Dense(self.latent_dim_local, activation='relu')(encoder_flat1)\n",
+    "        encoder_dense_global = layers.Dense(self.latent_dim_global, activation='relu')(encoder_flat2)\n",
+    "        encoder_concat = layers.concatenate([encoder_dense_local, encoder_dense_global])\n",
+    "        self.encoder = Model(inputs=encoder_inputs, outputs=encoder_concat)\n",
     "\n",
-    "        decoder_inputs = layers.Input(shape=(self.latent_dim,))\n",
+    "        decoder_inputs = layers.Input(shape=(self.latent_dim_local+self.latent_dim_global,))\n",
     "        decoder_dense1 = layers.Dense(59*16, activation='relu')(decoder_inputs)\n",
     "        decoder_reshape1 = layers.Reshape((59, 16))(decoder_dense1)\n",
     "        decoder_upsample1 = layers.UpSampling1D(4)(decoder_reshape1)\n",
-    "        decoder_convT1 = layers.Conv1DTranspose(filters=16, kernel_size=4, strides=2, activation='relu', padding='same')(decoder_upsample1)\n",
+    "        decoder_convT1 = layers.Conv1DTranspose(filters=8, kernel_size=4, strides=2, activation='relu', padding='same')(decoder_upsample1)\n",
     "        decoder_upsample2 = layers.UpSampling1D(5)(decoder_convT1)\n",
     "        decoder_convT2 = layers.Conv1DTranspose(filters=16, kernel_size=10, strides=5, activation='relu', padding='same')(decoder_upsample2)\n",
     "        decoder_outputs = layers.Conv1D(3, kernel_size=3, activation='relu', padding='same')(decoder_convT2)\n",
@@ -372,7 +375,7 @@
     "        decoded = self.decoder(encoded)\n",
     "        return decoded\n",
     "\n",
-    "autoencoder = Autoencoder(LATENT_DIM)\n",
+    "autoencoder = Autoencoder(LATENT_DIM_LOCAL, LATENT_DIM_GLOBAL)\n",
     "autoencoder.compile(optimizer=opt, loss='mse', metrics=['mse', 'mae', 'mape', tf.keras.metrics.RootMeanSquaredError(name='rmse')])\n",
     "autoencoder.encoder.summary()\n",
     "autoencoder.decoder.summary()\n",
@@ -484,14 +487,14 @@
     "    opt = tf.keras.optimizers.Adam(lr=0.000003)\n",
     "\n",
     "    model = Sequential()\n",
-    "    model.add(Masking(input_shape=(train_x.shape[1], train_x.shape[2])))\n",
-    "    model.add(LSTM(128, activation='selu',\n",
-    "                    return_sequences=True,\n",
+    "    model.add(layers.Input(shape=(train_x.shape[1], train_x.shape[2])))\n",
+    "    model.add(layers.Conv1D(64, kernel_size=8, strides=4, activation='relu',\n",
     "                    kernel_regularizer=regularizers.l2(0.0002)))\n",
-    "    model.add(LSTM(64, activation='selu', return_sequences=False,\n",
+    "    model.add(layers.Conv1D(32, kernel_size=4, strides=2, activation='relu',\n",
     "                    kernel_regularizer=regularizers.l2(0.0002)))\n",
-    "    model.add(Dense(64, activation='selu', kernel_regularizer=regularizers.l2(0.0002)))\n",
-    "    model.add(Dense(32, activation='selu', kernel_regularizer=regularizers.l2(0.0002)))\n",
+    "    model.add(layers.Flatten())\n",
+    "    model.add(Dense(32, activation='relu', kernel_regularizer=regularizers.l2(0.0002)))\n",
+    "    model.add(Dense(16, activation='relu', kernel_regularizer=regularizers.l2(0.0002)))\n",
     "    model.add(Dense(1, activation='linear'))\n",
     "    model.summary()\n",
     "\n",
