--- a/battery-rul-estimation/results/unibo-powertools/lstm_rul_unibo_results.ipynb
+++ b/battery-rul-estimation/results/unibo-powertools/lstm_rul_unibo_results.ipynb
@@ -134587,12 +134587,8 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.8.2 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-    }
-   },
+   "display_name": "Python 3.8.9 64-bit",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -134605,7 +134601,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2-final"
+   "version": "3.8.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
